--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "dependencies": {
     "@preact/preset-vite": "^2.9.3",
     "@sparkjsdev/spark": "^0.1.10",
-    "preact": "^10.26.0",
     "interactjs": "^1.10.27",
+    "pnpm": "^10.27.0",
+    "preact": "^10.26.0",
     "three": "^0.178.0",
     "vite": "^7.3.0",
     "zustand": "^5.0.3"
