--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
+    "@supabase/supabase-js": "^2.47.0",
     "@preact/preset-vite": "^2.9.3",
     "@sparkjsdev/spark": "^0.1.10",
     "interactjs": "^1.10.27",
