--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.758.0",
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
@@ -20,7 +21,6 @@
     "@sparkjsdev/spark": "^0.1.10",
     "@supabase/supabase-js": "^2.47.0",
     "@tweakpane/plugin-essentials": "^0.2.1",
-    "@aws-sdk/client-s3": "^3.758.0",
     "fflate": "^0.8.2",
     "gsap": "^3.14.2",
     "interactjs": "^1.10.27",
@@ -31,6 +31,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@vitejs/plugin-basic-ssl": "^2.1.0"
+    "@vitejs/plugin-basic-ssl": "^2.1.0",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
